--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,6 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-
 # Flask stuff:
 instance/
 .webassets-cache
@@ -78,8 +73,6 @@ target/
 # celery beat schedule file
 celerybeat-schedule
 
-# SageMath parsed files
-*.sage.py
 
 # Environments
 .env
@@ -90,9 +83,6 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
 
 # Rope project settings
 .ropeproject
@@ -102,3 +92,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# IDEA
+# User-specific stuff
+.idea/
